# moj_projekt

./: README.md  check_format.bat  clean.bat  format_code.bat  gui.py  install_deps.bat  lint.bat  main.py  pyproject.toml  run_gui.bat  run_tests.bat
.github/: ci.yml
.github/workflows/: ci.yml
scripts/: create_venv.sh  format_check.sh  lint.sh  test.sh
src/logic/: calculator.py
tests/: test_calculator.py
